[project]
name = "cyber-security"
version = "0.1.0"
description = ""
authors = [
    {name = "nikewalce"}
]
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "django-jazzmin (>=3.0.3,<4.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
